# VJAM

./: .gitignore  README.md  metrics.ndjson  package-lock.json
.github/workflows/: gcp.yml  javascript.yml  rust.yml
packageDirectory/: ServiceKey.json  database.js  database.mjs  database.py  database1.js  package-lock.json  package.json  serviceKey.json  test.py
repo_analyzer/: Cargo.toml  Makefile  URLs.txt  log.txt
repo_analyzer/src/: ._URLs.txt  URL.txt  URLs.txt  log.txt  logging.rs  main.rs  metric_calculations.rs  output.txt  output1.txt  read_url_file.rs  repo_analyzer_logger.rs  repo_list.rs  rest_api.rs  url_input.rs
repo_analyzer/tests/: integration_test.rs
website/: Dockerfile  app.yaml  ece461_api_specs.yaml  package-lock 2.json  package-lock.json  package.json  server.js
website/__tests__/frontend/: App.test.js
website/backend/: app.yaml  package-lock.json  package.json  parser.js  server.js
website/backend/models/: package.js  packagedata.js  packageid.js  packagemetadata.js  packagename.js  packagequery.js  packagerating.js  packageregex.js
website/backend/routes/: packageroutes.js
website/bridge/: analyze_packages.js
website/react/: app.yaml  package-lock.json  package.json
website/react/bridge/: parser.js  process_package.py
website/react/src/: App.js  App.test.js  Button.js  Home.js  Layout.jsx  index.js
website/repo_analyzer/: URLs.txt
website/repo_analyzer/src/: logging.rs  main.rs  metric_calculations.rs  repo_list.rs  rest_api.rs
website/website/: app.yaml  package-lock.json
website/website/public/: app.yaml
(+20 files in other folders)
